fix section trending stories gap

--- a/sass/objects/_sections.scss
+++ b/sass/objects/_sections.scss
@@ -60,6 +60,7 @@
 .section-trending-stories {
   display: flex;
   flex-direction: column;
+  row-gap: 4.6rem;
 
   & > .top,
   & > .main {
